--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(../images/about.jpg);"></div>
+				<div class="author-img" style="background-image: url(https://raw.githubusercontent.com/Elham-Robbani/Elham/main/images/about.JPG?fbclid=IwAR14I6aODU6GT_bQtcscdduqk_UIybgzcd8A_FHA8nKLqzE9ubUZBZVBRQ8);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Mohammad Elham Robbani</a></h1>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
