--- a/index.html
+++ b/index.html
@@ -592,8 +592,8 @@
 							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
 									<div class="about-desc">
-										<span class="heading-meta">Interests</span>
-										<h2 class="colorlib-heading">Interests</h2>
+										<span class="heading-meta">Skills</span>
+										<h2 class="colorlib-heading">Skills</h2>
 										<p><b>Technical Skill:</b></p>
 										<ul>
 											<li><strong>Expert:</strong> Python, Java, HTML, CSS, LaTeX .</li>
