--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
 								
 								<div class="colorlib-text">
 									<h3><b>EMAIL:</b></h3>
-									<p>mdelhamrobbani@gmail.com</p>
+									<p style="color:black;">mdelhamrobbani@gmail.com<</p>
 									<p>mohammad.elham.robbani@g.bracu.ac.bd</p>
 								</div>
 							</div>
