--- a/index.html
+++ b/index.html
@@ -853,8 +853,8 @@
 								
 								<div class="colorlib-text">
 									<h3><b>EMAIL:</b></h3>
-									<p style="color:black;">mdelhamrobbani@gmail.com<</p>
-									<p>mohammad.elham.robbani@g.bracu.ac.bd</p>
+									<p style="color:black;">mdelhamrobbani@gmail.com</p>
+									<p style="color:black;">mohammad.elham.robbani@g.bracu.ac.bd</p>
 								</div>
 							</div>
 
