--- a/index.html
+++ b/index.html
@@ -289,13 +289,26 @@
 					<div class="row">
 						<div class="col-md-12">
 				         <div class="timeline-centered">
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					          <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-1">
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					                  <h2>Machine Learning and Embedded System Engineer <span>February 2021- present</span></h2>
+					                  <h2>Embedded Systems Engineer <span>July 2022- Present</span></h2>
+									  <h5><a href="https://www.tespack.com/" target="_blank">Tespack, Finland</a></h5>
+					                  <p>I am here as a full-time embedded systems engineer working remotely from Bangladesh. Develop firmware and RTOS systems. Write code and support the RD team in general with different development tasks. I support embedded electronics development and overall hardware development as part of the R&D team. Assist the R&D team as needed with current and new projects around electronics and hardware development. </p>
+					               </div>
+					            </div>
+					         </article>
+						 
+						 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-1">
+					                  <i class="icon-pen2"></i>
+					               </div>
+					               <div class="timeline-label">
+					                  <h2>Machine Learning and Embedded System Engineer <span>February 2021- June 2022</span></h2>
 									  <h5><a href="https://www.linkedin.com/company/onushondhani-lab/?originalSubdomain=bd" target="_blank">Onushondhani Lab</a></h5>
 					                  <p>Working on computer vision-based Autonomous Driver Assistance System for vehicles. Where the main purpose is to create smart industry-grade solutions through machine learning and computer vision in embedded systems. </p>
 					               </div>
