--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 					               <div class="timeline-label">
 					                  <h2>Machine Learning and Embedded System Engineer <span>February 2021- June 2022</span></h2>
 									  <h5><a href="https://www.linkedin.com/company/onushondhani-lab/?originalSubdomain=bd" target="_blank">Onushondhani Lab</a></h5>
-					                  <p>Working on computer vision-based Autonomous Driver Assistance System for vehicles. Where the main purpose is to create smart industry-grade solutions through machine learning and computer vision in embedded systems. </p>
+					                  <p>Worked on computer vision-based Autonomous Driver Assistance System for vehicles. Where the main purpose is to create smart industry-grade solutions through machine learning and computer vision in embedded systems. </p>
 					               </div>
 					            </div>
 					         </article>
@@ -612,7 +612,7 @@
 											<li><strong>Expert:</strong> Python, Java, HTML, CSS, LaTeX .</li>
 											<li><strong>Fairly Good:</strong> JavaScript, PHP, SQL, Matlab, Assembly.</li>
 											<li><strong>Software Tools:</strong> MS Word, PowerPoint, Excel.</li>
-											<li><strong>Hardware Tools:</strong> Adruino, ESP, and Different Micro-controllers and Networking chips.</li>
+											<li><strong>Hardware Tools:</strong> STM32, Adruino, ESP, and Different Micro-controllers and Networking chips.</li>
 											<li><strong>Design Tools:</strong> Proteus circuit simulator, AutoCAD, and CISCO packet tracer.</li>
 											<li><strong>Machine Learning Platform:</strong> TensorFlow, Keras, Pytorch.</li>
 											<li><strong>Computer Vision:</strong> OpenCV</li>
