--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					                  <h2>Machine Learning and Embedded System Engineer <span>February 2021- June 2022</span></h2>
+					                  <h2>Machine Learning and Embedded Systems Engineer <span>February 2021- June 2022</span></h2>
 									  <h5><a href="https://www.linkedin.com/company/onushondhani-lab/?originalSubdomain=bd" target="_blank">Onushondhani Lab</a></h5>
 					                  <p>Worked on computer vision-based Autonomous Driver Assistance System for vehicles. Where the main purpose is to create smart industry-grade solutions through machine learning and computer vision in embedded systems. </p>
 					               </div>
