--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					                  <h2>Embedded Systems Engineer <span>July 2022- Present</span></h2>
+					                  <h2>Embedded Systems Engineer <span>July 2022- Ongoing</span></h2>
 									  <h5><a href="https://www.tespack.com/" target="_blank">Tespack, Finland</a></h5>
 					                  <p>I am here as a full-time embedded systems engineer working remotely from Bangladesh. Develop firmware and RTOS systems. Write code and support the RD team in general with different development tasks. I support embedded electronics development and overall hardware development as part of the R&D team. Assist the R&D team as needed with current and new projects around electronics and hardware development. </p>
 					               </div>
@@ -361,7 +361,7 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					                  <h2>Founder Member <span>February 2018 - Present</span></h2>
+					                  <h2>Founder Member <span>February 2018 - Ongoing</span></h2>
 									  <h5>BRACU Duburi (Bangladesh’s First Autonomous Underwater Vehicle)</h5>
 					                  <p>BRACU Duburi is the country's first autonomous underwater vehicle, and the only team from the country to be selected for the Singapore Autonomous Underwater Vehicle Challenge (SAUVC) finals in Singapore.</p>
 					               </div>
