--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					                  <h2>Embedded Systems Engineer <span>July 2022- Ongoing</span></h2>
+					                  <h2>Embedded Systems & TinyML Engineer <span>July 2022- Ongoing</span></h2>
 									  <h5><a href="https://www.tespack.com/" target="_blank">Tespack, Finland</a></h5>
 					                  <p>I am here as a full-time embedded systems engineer working remotely from Bangladesh. My principal task here is to develop firmware and RTOS systems. I also write code and support the RD team in general with different development tasks. Besides, I support embedded electronics development and overall hardware development as part of the R&D team. Furthermore, assist the R&D team as needed with current and new projects around electronics and hardware development. </p>
 					               </div>
