--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">Interest</span>
 										<h2 class="colorlib-heading">Interest</h2>
-										<p>Research Interests:</p>
+										<p>Academic & Career Interests:</p>
 										<ul>
 											<li>Artificial Intelligence and Machine Learning.</li>
 											<li>Deep Learning and Neural Networks.</li>
