--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
 											<li>Artificial Intelligence and Machine Learning.</li>
 											<li>Deep Learning and Neural Networks.</li>
 											<li>Single Channel Night Vision Image Processing, Computer Vision</li>
-											<li>Robotics</li>
+											<li>Robotics & Embedded Systems</li>
 											<li>Underwater Robotics</li>
 										</ul>
 										<p>Hobbies and other interests:</p>
