--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">About</h2>
-										<p>I am a fresh graduate from the Department of Computer Science and Engineering (CSE), BRAC University.  I worked on Deep Reinforcement Learning for my undergrad thesis. I want to obtain a position where my knowledge and experience can be utilized as well as enhanced. Recently I won <strong>IEEE Developing Country Researcher Award</strong> at <strong>The Asia-Pacific Conference on Computer Science and Data Engineering (IEEE CSDE 2021)</strong> in <strong>Brisbane, Australia</strong>.</p>
+										<p>I am a graduate from the Department of Computer Science and Engineering (CSE), BRAC University.  I worked on Deep Reinforcement Learning for my undergrad thesis. I want to obtain a position where my knowledge and experience can be utilized as well as enhanced. Recently I won <strong>IEEE Developing Country Researcher Award</strong> at <strong>The Asia-Pacific Conference on Computer Science and Data Engineering (IEEE CSDE 2021)</strong> in <strong>Brisbane, Australia</strong>.</p>
 										<!-- <p><strong>Hi I'm Jackson Ford</strong> On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p> -->
 										<!-- <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p> -->
 									</div>
