--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 														<p><b><i>Obtained Degree:</i></b> B.Sc. Engg</p>
 														<p><b><i>Subject:</i></b> Computer Science and Engineering (CSE)</p>
 														<p><b><i>CGPA:</i></b> 3.04(Above 80 percent)/4.00</p>
-													        <p style="padding-left: 11px;">&#8195;&#8195;: 3.51(Last 2 years,82 credits hours)/4.00</p>
+													        <p style="padding-left: 11px;">&#8195;&#8195;: 3.51/4.00 [Last 2 years,82 credits hours]</p>
 										      		</div>
 										      	</div>
 									         </div>
